--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My exercises through the process of learning \"Deep Learning\"",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "http-server ./public",
+    "dev": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,20 @@
   "bugs": {
     "url": "https://github.com/Alireza29675/deep-learning-exercises/issues"
   },
-  "homepage": "https://github.com/Alireza29675/deep-learning-exercises#readme"
+  "homepage": "https://github.com/Alireza29675/deep-learning-exercises#readme",
+  "dependencies": {
+    "d0": "^1.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.6.0"
+  }
 }
